--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,6 @@
           </div>
           
         </div>
-        <script src="dist/bundle.js"></script>
+        <script src="../src/app.js"></script>
     </body>
 </html>
